--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.6.0",
+    "cookie-parser": "^1.4.6",
     "cookie-signature": "^1.0.6",
     "debug": "^2.6.9",
     "define-data-property": "^1.1.4",
@@ -35,6 +36,7 @@
     "etag": "^1.8.1",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
+    "express-validator": "^7.1.0",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
     "forwarded": "^0.2.0",
@@ -68,6 +70,7 @@
     "minimatch": "^3.1.2",
     "mongoose": "^8.3.4",
     "ms": "^2.0.0",
+    "multer": "^1.4.5-lts.1",
     "negotiator": "^0.6.3",
     "nodemailer": "^6.9.13",
     "nopt": "^1.0.10",
