--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
     "chokidar": "^3.6.0",
+    "cloudinary": "^2.2.0",
     "concat-map": "^0.0.1",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
@@ -95,6 +96,7 @@
     "setprototypeof": "^1.2.0",
     "side-channel": "^1.0.6",
     "simple-update-notifier": "^2.0.0",
+    "slugify": "^1.6.6",
     "statuses": "^2.0.1",
     "supports-color": "^5.5.0",
     "to-regex-range": "^5.0.1",
